# bitstream-io

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bitstream.rs  read.rs  write.rs
examples/: flac-metadata-read.rs  flac-metadata-write.rs
examples/data/: metadata-only.flac
src/: byte_io.rs  huffman.rs  lib.rs  read.rs  write.rs
tests/: endianness.rs  huffman.rs  read.rs  read_seek.rs  roundtrip.rs  write.rs
