[package]
name = "bitstream-io"
description = "Library for reading/writing un-aligned values from/to streams in big-endian and little-endian formats."
keywords = ["bitstream", "endian", "big-endian", "little-endian", "binary"]
version = "4.5.0"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/bitstream-io/"
homepage = "https://github.com/tuffy/bitstream-io"
repository = "https://github.com/tuffy/bitstream-io"
edition = "2018"
rust-version = "1.83"

[dependencies]
core2 = "0.4"

[features]
std = []
default = ["std"]
